--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="manifest" href="/manifest.webmanifest" />
+    <meta name="theme-color" content="#2563eb" />
+    
+
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <link rel="icon" type="image/x-icon" href="/icon.png" />
+    
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Travel Checklist Plus</title>
